--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
             <hr>
             <div class="questions">
 
+                <div class="question1">
+                    <h4>What is Short form of HTML?</h4>
+                    <P><input type="radio" name="qst1" value="html">HTML</P>
+                    <P><input type="radio" name="qst1" value="hmlt">hmlt</P>
+                    <P><input type="radio" name="qst1" value="mlht">MLHT</P>
+                </div>
+
+                <br>
+
 </body>
 
 </html>
