question2 and choices

--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
 
                 <br>
 
+                <div class="question2">
+                    <h4>What is the other name for Javascript?</h4>
+                    <P><input type="radio" name="qst2" value="ECMAscript">ECMAscript</P>
+                    <P><input type="radio" name="qst2" value="js">JS</P>
+                    <P><input type="radio" name="qst2" value="css">CSS</P>
+                </div>
+
+                <br>
+
+
 </body>
 
 </html>
