question 3 and choices

--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
 
                 <br>
 
+                <div class="question3">
+                    <h4>Is C++ a low level language?</h4>
+                    <P><input type="radio" name="qst3" value="yes">YES</P>
+                    <P><input type="radio" name="qst3" value="no">NO</P>
+                </div>
+
+                <hr class="line">
 
 </body>
 
