add clickable button to show score and link js with html

--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
 
                 <hr class="line">
 
+            </div>
+
+            <input type="button" value="Submit" id="Btn" onclick="myClass()">
+            <div id="result">
+                <h3>Show Your Score</h3>
+            </div>
+        </div>
+    </form>
+    <script type="text/javascript" src="index.js"></script>
+
 </body>
 
 </html>
