add points for question

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="questions">
 
                 <div class="question1">
-                    <h4>What is Short form of HTML?</h4>
+                    <h4>What is Short form of HTML? (1 Point)</h4>
                     <P><input type="radio" name="qst1" value="html">HTML</P>
                     <P><input type="radio" name="qst1" value="hmlt">hmlt</P>
                     <P><input type="radio" name="qst1" value="mlht">MLHT</P>
@@ -31,7 +31,7 @@
                 <br>
 
                 <div class="question2">
-                    <h4>What is the other name for Javascript?</h4>
+                    <h4>What is the other name for Javascript?(1 Point)</h4>
                     <P><input type="radio" name="qst2" value="ECMAscript">ECMAscript</P>
                     <P><input type="radio" name="qst2" value="js">JS</P>
                     <P><input type="radio" name="qst2" value="css">CSS</P>
@@ -40,7 +40,7 @@
                 <br>
 
                 <div class="question3">
-                    <h4>Is C++ a low level language?</h4>
+                    <h4>Is C++ a low level language? (1 Point)</h4>
                     <P><input type="radio" name="qst3" value="yes">YES</P>
                     <P><input type="radio" name="qst3" value="no">NO</P>
                 </div>
