add scrolling text using marquee

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
             </div>
         </div>
     </form>
+
+    <marquee class="mar" behavior="scroll" direction="left" scrollamount="15"> Please Take your time to answer all
+        questions right............Your are hero!!! ................You can do it at click of button.</marquee>
+
     <script type="text/javascript" src="index.js"></script>
 </body>
 
