--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="box2">
             <h2>QuizBoard</h2>
-            <img src="./assets/images/images-removebg-preview.png">
+            <img src="./assets/images/images.jpeg">
             <hr>
             <div class="questions">
 
